Rohan | #0 | Removing cache. Updated the gitignore to not commit cache

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "oro/platform": "1.8.*"
+        "oro/platform": "1.8.*",
+        "oro/crm": "1.8.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "2.5.3"
