--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,6 @@ composer.lock
 /app/config/parameters.yml
 /app/config/parameters_test.yml
 *~
-
 /app/SymfonyRequirements.php
+/app/cache
+.DS_Store
